--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  background-image: linear-gradient(180deg, #ffffe9 0%, #a7d4ff 100%);
+  background-repeat: no-repeat;
+  background-size: contain, cover;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.css-1bw0nnu-MuiStep-root {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+.css-1d6wzja-MuiButton-startIcon {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+.css-13cymwt-control {
+  border-radius: 2em !important;
+  box-shadow: 8px 5px #a6a6a6;
+  width: 18em !important;
+}
+.css-t3ipsp-control:hover {
+  border-radius: 2em !important;
+  box-shadow: 8px 5px #a6a6a6;
+  width: 18em !important;
+}
+.css-t3ipsp-control {
+  border-radius: 2em !important;
+  box-shadow: 8px 5px #a6a6a6;
+  width: 18em !important;
+}
+.css-mqmnnr-Input {
+  border-radius: 2em !important;
+  /* box-shadow: 8px 5px #a6a6a6; */
+  width: 18em !important;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.css-v4u5dn-MuiInputBase-root-MuiInput-root::before {
+  content: "" !important;
+  position: relative !important;
+}
+.css-v4u5dn-MuiInputBase-root-MuiInput-root::after {
+  border: none !important;
+}
+.css-v4u5dn-MuiInputBase-root-MuiInput-root {
+  margin-left: 0.5em !important;
+}
+.css-1x51dt5-MuiInputBase-input-MuiInput-input {
+  height: 1.5em !important;
+}
+.css-1e6y48t-MuiButtonBase-root-MuiButton-root {
+  padding: none !important;
 }
