--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,6 @@ body {
 .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
   padding: none !important;
 }
+.css-mro3c9 {
+  padding: 0 !important;
+}
