--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ body {
 }
 .css-1e6y48t-MuiButtonBase-root-MuiButton-root {
   padding: none !important;
+  color: #000 !important;
 }
 .css-mro3c9 {
   padding: 0 !important;
